add task button

--- a/src/app/common/header/header.component.html
+++ b/src/app/common/header/header.component.html
@@ -1,13 +1,13 @@
 <mat-toolbar>
-    <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
-      <mat-icon>menu</mat-icon>
-    </button>
-    <span>My App</span>
-    <span class="example-spacer"></span>
-    <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
-      <mat-icon>favorite</mat-icon>
-    </button>
-    <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
-      <mat-icon>share</mat-icon>
-    </button>
+  <div class="nav">
+    <div>
+      <span>My Todo</span>
+    </div>
+    <div>
+      <button mat-raised-button color="primary" aria-label="Example icon-button with menu icon">
+        Adicionar Tarefa
+        <mat-icon>add</mat-icon>
+      </button>
+    </div> 
+  </div>
 </mat-toolbar>
