--- a/src/app/pages/tasks/tasks.component.scss
+++ b/src/app/pages/tasks/tasks.component.scss
@@ -1,31 +1,53 @@
+$border-radius-5: 5px;
+
 .tasks {
-    display: flex;
-    justify-content: space-around;
+  margin-top: 1rem;
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+  
+  .pending,
+  .finished {
+    height: 100%;
+    width: 40%;  
+    background-color: #ebecf0;
+    padding: 1rem;
+    border-radius: $border-radius-5;
+  }
 }
 
-  .example-list {
-    border: solid 1px #ccc;
-    min-height: 60px;
-    background: white;
-    border-radius: 4px;
-    overflow: hidden;
-    display: block;
-  }
+.status-title {
+  text-align: center;
+  margin-bottom: 0;
+}
+
+.example-list {
+  border: solid 1px #ccc;
+  min-height: 60px;
+  height: 100%;
+  padding: .5rem;
+  border-radius: $border-radius-5;
+  overflow: hidden;
+  display: block;
+}
+
+.example-box {
+  margin: 10px 0;
+  padding: 20px 10px;
+  border-bottom: solid 1px #ccc;
+  color: rgba(0, 0, 0, 0.87);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  box-sizing: border-box;
+  cursor: move;
+  background: white;
+  font-size: 14px;
+  border-radius: $border-radius-5;
+}
   
-  .example-box {
-    padding: 20px 10px;
-    border-bottom: solid 1px #ccc;
-    color: rgba(0, 0, 0, 0.87);
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    box-sizing: border-box;
-    cursor: move;
-    background: white;
-    font-size: 14px;
-  }
-  
+  /*
   .cdk-drag-preview {
     box-sizing: border-box;
     border-radius: 4px;
@@ -49,3 +71,4 @@
   .example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
   }
+  */
