--- a/src/app/pages/tasks/tasks.component.scss
+++ b/src/app/pages/tasks/tasks.component.scss
@@ -37,14 +37,43 @@ $border-radius-5: 5px;
   border-bottom: solid 1px #ccc;
   color: rgba(0, 0, 0, 0.87);
   display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
+  flex-direction: column;
   box-sizing: border-box;
   cursor: move;
   background: white;
-  font-size: 14px;
   border-radius: $border-radius-5;
+  position: relative;
+  
+  .actions {
+    top: 10px;
+    right: 10px;            
+    position: absolute;
+    border: solid 1px #ccc;
+    border-radius: $border-radius-5;
+    display: none;
+  }
+  
+  p{
+    font-size: 14px;
+    margin-bottom: 0;
+    width: 100%;
+    max-height: 100px;
+    overflow: hidden;
+    word-break: break-all;
+    text-overflow: ellipsis;    
+  }
+
+  mat-hint {
+    font-size: 12px;
+    font-style: italic;
+  }
+
+  &:hover {
+    .actions {
+      display: block;
+    }
+  }
+
 }
   
   /*
