fix test height

--- a/src/app/pages/tasks/card-task/card-task.component.html
+++ b/src/app/pages/tasks/card-task/card-task.component.html
@@ -1,1 +1,7 @@
-<p>card-task works!</p>
+<div class="actions">
+    <a>
+        <mat-icon>mode_edit</mat-icon>
+    </a>
+</div>
+<p [innerHtml]="item.description" class="description"></p>
+<mat-hint>{{item?.owner}}</mat-hint>
