--- a/src/app/pages/tasks/tasks.component.html
+++ b/src/app/pages/tasks/tasks.component.html
@@ -7,18 +7,13 @@
                 [cdkDropListData]="pendingTasks"
                 class="example-list"
                 (cdkDropListDropped)="drop($event)">
-                <div class="example-box" 
+                <app-card-task 
+                    class="example-box" 
                     *ngFor="let item of pendingTasks" 
                     (click)="openTaskDialog(item)"
-                    cdkDrag>
-                    <div class="actions">
-                        <a>
-                            <mat-icon>mode_edit</mat-icon>
-                        </a>
-                    </div>
-                    <p [innerHtml]="item.description"></p>
-                    <mat-hint>{{item?.owner}}</mat-hint>
-                </div>
+                    cdkDrag
+                    [item]="item"
+                ></app-card-task>
             </div>
         </div>
         <div class="w-half finished">
