--- a/src/app/shared/task-form/form.component.html
+++ b/src/app/shared/task-form/form.component.html
@@ -19,6 +19,15 @@
         <textarea matInput rows="5" formControlName="description"></textarea>
         <mat-error *ngIf="taskForm.controls.description.hasError('required')">Por favor, preencha este campo.</mat-error>
       </mat-form-field>
+
+      
+      <mat-error *ngIf="showEmailAlert">
+        O e-mail inserido é inválido.
+        <span *ngIf="emailSuggestion">
+          <br>
+          Nossa Sugestão: {{emailSuggestion}}
+        </span> 
+      </mat-error>
   </div>
   <div mat-dialog-actions class="actions">
     <button 
