--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -11,6 +11,14 @@
         Adicionar Tarefa
         <mat-icon>add</mat-icon>
       </button>
+
+      <button 
+        (click)="openDialogNoTasks()"
+        mat-raised-button color="default" 
+        aria-label="Example icon-button with menu icon">
+        Estou sem tarefas
+        <mat-icon>playlist_add</mat-icon>
+      </button>
     </div> 
   </div>
 </mat-toolbar>
