update list after insert one task

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -11,7 +11,7 @@
         Adicionar Tarefa
         <mat-icon>add</mat-icon>
       </button>
-
+      &nbsp;
       <button 
         (click)="openDialogNoTasks()"
         mat-raised-button color="default" 
