--- a/src/app/pages/tasks/card-task/card-task.component.scss
+++ b/src/app/pages/tasks/card-task/card-task.component.scss
@@ -1,14 +1,31 @@
+$font-size: 10px;
+
 .description {
     min-height: 20px;
     max-height: 100px;
     overflow: hidden;  
     text-overflow: ellipsis;
-
+    font-size: $font-size;
+    margin-bottom: 0;
 }
+mat-hint {
+    font-size: $font-size;
+    font-style: italic;
+}
+
 .actions {
-    top: 10px;
-    right: 10px;            
+    top: 5px;
+    right: 5px;       
+    color: #919191;     
     position: absolute;
-    border: solid 1px #ccc;
     border-radius: "5px";
+    display: none;
+}
+
+:host {
+    &:hover {
+        .actions {
+            display: block;
+        }
+    }
 }
