--- a/src/app/pages/tasks/tasks.component.scss
+++ b/src/app/pages/tasks/tasks.component.scss
@@ -9,9 +9,8 @@ $border-radius-5: 5px;
   .finished {
     height: 100%;
     width: 40%;
-    background-color: #ebecf0;
+    background-color: #3f51b5;
     padding: 1rem;
-    border-radius: $border-radius-5;
     max-width: 40%;
   }
 }
@@ -19,14 +18,15 @@ $border-radius-5: 5px;
 .status-title {
   text-align: center;
   margin-bottom: 0;
+  color: #FFF;
+  font-weight: bold;
+  text-transform: uppercase;
 }
 
 .example-list {
-  border: solid 1px #ccc;
   min-height: 60px;
   height: 100%;
   padding: .5rem;
-  border-radius: $border-radius-5;
   overflow: hidden;
   display: block;
 }
@@ -43,21 +43,6 @@ $border-radius-5: 5px;
   background: white;
   border-radius: $border-radius-5;
   position: relative;
-  
-  p{
-    font-size: 14px;
-    margin-bottom: 0;
-    width: 100%;
-    max-height: 100px;
-    overflow: hidden;
-    word-break: break-all;
-    text-overflow: ellipsis;    
-  }
-
-  mat-hint {
-    font-size: 12px;
-    font-style: italic;
-  }
 
 }
   
