opactity on tasks list

--- a/src/app/pages/tasks/tasks.component.scss
+++ b/src/app/pages/tasks/tasks.component.scss
@@ -9,7 +9,8 @@ $border-radius-5: 5px;
   .finished {
     height: 100%;
     width: 40%;
-    background-color: #3f51b5;
+    background-color: #5269e6;
+    opacity: .9;
     padding: 1rem;
     max-width: 40%;
   }
